--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-toast-notification": "^0.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
